--- a/INSTALL
+++ b/INSTALL
@@ -22,7 +22,7 @@ This file describes how to build BKUNIX from the source package.
 	pdp11-size	- object size utility
 	pdp11-strip	- object strip utility
 
-    Some files will be installed to /usr/local/lib:
+    Some files will be installed to /usr/local/lib/pdp11:
 
 	c0		- first pass of Ritchie's C compiler
 	c1		- second pass of Ritchie's C compiler
@@ -36,7 +36,18 @@ This file describes how to build BKUNIX from the source package.
     You want to install to another directory, edit the cross-devel/Makefile
     and set DESTDIR to the name of target directory.
 
-2.  Install the filesystem utility. Go to fsutil/ directory and type
+2.  Build and install the C library for target system.
+    Enter src/libc/ directory and type
+
+	make
+	make install
+
+    The following files will be installed into /usr/local/lib/pdp11:
+
+	crt0.o		- C runtime startoff routine
+	libc.a		- standard C library
+
+3.  Install the filesystem utility. Go to fsutil/ directory and type
 
 	make
 	make install
@@ -45,7 +56,7 @@ This file describes how to build BKUNIX from the source package.
     If you want to install to another directory, edit the fsutil/Makefile
     and set DESTDIR to the name of target directory.
 
-3.  To build a BKUNIX disk images, enter src/ directory and type
+4.  To build BKUNIX disk images, enter src/ directory and type
 
 	make
 
@@ -58,13 +69,16 @@ This file describes how to build BKUNIX from the source package.
 
 	u6-fsutil -v root.dsk
 
-4.  To run the system you will need SIMH emulator "pdp11" installed
+5.  To run the system you will need SIMH emulator "pdp11" installed
     somewhere in the path. Enter src/ directory and type:
 
 	make run
 
     On "rx boot:" prompt type "lsx". You will get root shell prompt "# ".
     To exit from SIMH, type ^E then q and press Enter.
+
+    You can download the sources of SIMH from the Computer History
+    Simulation Project page (http://simh.trailing-edge.com).
 
 For more information about BKUNIX project, visit bkunix.sourceforge.net.
 You are welcome to the world on ancient unix! :-)
